--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
+<footer class="container">
+    <p class="text-center">&copy; 2020</p>
+  </footer>
