--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,8 +1,9 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <h5 class="my-0 mr-md-auto font-weight-normal">Home</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-      <a class="p-2 text-dark" href="#">Hacker News</a>
-      <a class="p-2 text-dark" href="#">Quizzes</a>
-      <a class="p-2 text-dark" href="#">About me</a>
+      <a class="p-2 text-dark" [routerLink]="'/hacker-news'">Hacker News</a>
+      <a class="p-2 text-dark" [routerLink]="'/quiz'">Quizzes</a>
+      <a class="p-2 text-dark" [routerLink]="'/aboutme'">About me</a>
+      <a *ngIf="userLoggedIn| async" (click)="logout()" [routerLink]="'/user/login'" class="p-2 text-dark">Logout</a>
     </nav>
   </div>
