--- a/src/app/public/blog-view/blog-view.component.html
+++ b/src/app/public/blog-view/blog-view.component.html
@@ -1,6 +1,7 @@
+<app-placeholder *ngIf="blogLoading" ></app-placeholder>
 <div class="container">
     <div class="row">
-        <div class="col-sm-12 m-2">
+        <div *ngIf="blogs" class="col-sm-12 m-2">
             <div *ngFor="let item of blogs">
                 <h2 class="text-center">{{item.title}}</h2>
                 <div class="d-flex justify-content-center">
