--- a/src/app/public/about-me/about-me.component.html
+++ b/src/app/public/about-me/about-me.component.html
@@ -1,4 +1,4 @@
 <div class="m-5">
-    <h1 class="text-center">Still seeking identity</h1>
-    <h5 class="text-center">I will fill once i find about myself a time</h5>
+    <h1 class="text-center">...</h1>
+    <h5 class="text-center">This page will be about me</h5>
 </div>
