--- a/src/styles.css
+++ b/src/styles.css
@@ -5,10 +5,12 @@
 html, body { height: 100%; }
 body { 
   margin: 0; 
-  font-family:'Times New Roman', Times, serif, "Helvetica Neue", sans-serif; 
+  font-family: 'Quicksand', sans-serif;
+  background-color: white;
 }
  p{
    font-size: 20px;
+   font-weight: 100;
  }
 
 .mat-form-field{
