--- a/src/app/hacker-news/news-home/news-home.component.html
+++ b/src/app/hacker-news/news-home/news-home.component.html
@@ -1,3 +1,12 @@
-<div class="m5">
-    <h1 class="text-center">This page will be filled with hacker news.</h1>
+<div class="container">
+    <div *ngIf="stories" class="ui relaxed divided list">
+        <div *ngFor="let item of stories" class="item">
+            <i class="large blogger middle aligned icon"></i>
+            <div class="content">
+                <a href="{{item.url}}" target="_blank" class="header">{{item.title}}</a>
+                <div class="description"><i class="user middle aligned icon"></i> <b>{{item.by}}</b>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
